--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #2b1d1c;
+    background-color: #f5efeb;
     color: #ffffff;
 }
 
@@ -15,7 +15,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #411412;
+    background-color: #f5efeb;
 }
 .logo{
     display: flex;
@@ -29,12 +29,14 @@ header {
 }
 
 .logo a{
-    color: #e3a290; 
+    color: #567c8d; 
     padding-left: 10px;
-    font-size: 30px
+    font-size: 30px;
+    font-weight: bold;
 }
+
 .navigation-panel{
-    background-color: #da0f00;
+    background-color: #2f4156;
     height: 30px;
     display: flex;
     justify-content: center;
@@ -42,7 +44,7 @@ header {
     font-weight: bold;
 }
 .navigation-panel ul{
-    gap: 60px
+    gap: 100px
 }
 div ul {
     display: flex;
@@ -54,11 +56,13 @@ div ul li {
 }
 
 div ul li a {
-    color: #e3a290;
+    color: #ffffff;
     text-decoration: none;
     font-size: 18px;
 }
-
+div ul li a:hover {
+    color: #a7c0cc;
+}
 .carousel {
     margin: 30px auto;
     display: flex;
@@ -73,15 +77,37 @@ div ul li a {
     position: relative;
     width: 60%;
     height: 300px;
-    background-color: #cc6f5f;
+    background-color: #c8d9e6;
+    border-radius: 20px;
+    position: relative;
+}
+
+.carousel-slide1, .carousel-slide2, .carousel-slide3, .carousel-slide4, .carousel-slide5 {
+    display: none; 
+    width: 100%;
+    height: 100%;
+    background-color: #c8d9e6;
     border-radius: 20px;
 }
 
-.carousel-slide {
-    width: 100%;
-    height: 100%;
-    background-color: #d97363;
-    border-radius: 20px;
+.active {
+    display: block; 
+}
+
+.carousel-slide1 {
+    background-color: #c8d9e6;
+}
+.carousel-slide2 {
+    background-color: yellow;
+}
+.carousel-slide3 {
+    background-color: green;
+}
+.carousel-slide4 {
+    background-color: blue;
+}
+.carousel-slide5 {
+    background-color: purple;
 }
 
 .prev, .next {
@@ -111,13 +137,13 @@ div ul li a {
     height: 10px;
     width: 10px;
     margin: 0 5px;
-    background-color: #aaa;
+    background-color: #2f4156;
     border-radius: 50%;
     display: inline-block;
 }
 
 .dot.active {
-    background-color: #fff;
+    background-color: #567c8d;
 }
 
 .search {
@@ -131,14 +157,16 @@ div ul li a {
     padding: 10px;
     border-radius: 5px;
     border: none;
-    width: 820px;
+    width: 56%;
     height: 50px;
+    background-color: #ffffff;
+    color: #567c8d;
 }
 
 .search button {
     padding: 10px;
     margin-left: 10px;
-    background-color: #cc7d7d;
+    background-color: #567c8d;
     border: none;
     color: white;
     border-radius: 5px;
@@ -153,7 +181,7 @@ div ul li a {
 .read-today h2 {
     margin-bottom: 10px;
     font-size: 24px;
-    color: #c04421;
+    color: #2f4156;
 }
 
 .read-today-items {
@@ -165,7 +193,58 @@ div ul li a {
 .read-today .item {
     width: 150px;
     height: 150px;
-    background-color: #cc7d7d;
+    background-color: #2f4156;
     border-radius: 10px;
 }
+
+.popular-categoriesh2{
+    margin-left: 19%;
+    padding-top: 30px;
+    color:#567c8d
+}
+
+.popular-categories {
+    margin: 10px auto;
+    max-width: 1200px;
+    text-align: center;
+    display: flex;             
+    justify-content: center;   
+    align-items: center;
+    margin-bottom: 30px;
     
+}
+
+.categories-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);  
+    text-align: center;
+    gap: 10px 100px;
+}
+
+.category-item {
+    background-color: #567c8d;
+    color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    transition: background-color 0.5s;
+    cursor: pointer;
+}
+
+.category-item:hover {
+    background-color: #2f4156;
+}
+
+
+.footer {
+    background-color: #2f4156; 
+    color: #ffffff;
+    padding: 20px; 
+    text-align: end; 
+    position: relative; 
+    width: 100%; 
+}
