--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,23 @@
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-    max-width: 1440px;
-    justify-content: center;
 }
 
 body {
     background-color: #f5efeb;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
 header {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     background-color: #2f4156;
-    padding: 10px 20px;
+    padding: 10px 40px;
+    justify-content: space-between;
 }
 
 .logo {
@@ -24,260 +26,378 @@ header {
 }
 
 .logo img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
 }
 
 .logo a {
     color: #ffffff;
     padding-left: 10px;
-    font-size: 20px;
+    font-size: 36px;
     font-weight: bold;
     text-decoration: none;
 }
 
-.navigation-panel {
-    flex: 1;
-    display: flex;
-    margin-left: 340px;
-} 
-
 .navigation-panel ul {
     display: flex;
-    justify-content: center;
-    gap: 50px;
+    gap: 75px;
     list-style: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+.navigation-panel ul button{
+    background-color: #2f4156;
+    border: none;
+    margin: -20px;
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: bold;
 }
 
 .navigation-panel ul li a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 32px;
     font-weight: bold;
 }
 
 .navigation-panel ul li a:hover {
     color: #a7c0cc;
 }
+
 .carousel {
-    margin: 30px auto;
+    margin: 20px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
+
 .carousel-container {
     display: flex;
-    justify-content: center;
     align-items: center;
     position: relative;
-    width: 60%;
-    height: 300px;
-    background-color: #c8d9e6;
-    border-radius: 20px;
+    width: 90%;
+    max-width: 800px;
+    margin: auto;
+    overflow: hidden;
 }
 
-.carousel-slide1, .carousel-slide2, .carousel-slide3, .carousel-slide4, .carousel-slide5 {
+.carousel-container {
+    position: relative;
+    width: 90%;
+    max-width: 1100px;
+    height: 350px;
+    margin: 20px auto;
+    overflow: hidden;
+    background-color: #2f4156;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.carousel-slide {
     display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    flex-direction: row; /* Выравнивание элементов горизонтально */
-    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
+    transition: all 0.5s ease;
 }
 
-.carousel-slide1 img, .carousel-slide2 img, .carousel-slide3 img, .carousel-slide4 img, .carousel-slide5 img {
-    width: 220px;
-    height: 250px;
-    border-radius: 10px;
-    margin-left: 550px; /* Изображение справа */
-    margin-top: -200px;
+.carousel-slide.active {
+    display: flex;
 }
-.book-button {
-    background-color: #567c8d;
+
+.carousel-text {
+    text-align: left;
+    width: 50%;
     color: #ffffff;
-    width: 170px;
-    font-size: 20px;
-    padding: 10px 20px;
+    font-size: 30px;
+    margin-left: 3rem;
+}
+
+.carousel-image {
+    width: 40%;
+    border-radius: 10px;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.slide-1 {
+    background: #2f4156;
+}
+
+.slide-2 {
+    background: #374960;
+}
+
+.slide-3 {
+    background: #42566b;
+}
+
+.slide-4 {
+    background: #4a5f75;
+}
+
+.slide-5 {
+    background: #536981;
+}
+
+.book-button {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 12px 20px;
+    font-size: 28px;
+    color: #2f4156;
+    background-color: #ffffff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 100px;
-    margin-left: 50px;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    text-transform: uppercase;
+    margin-left: 5rem;
 }
 
-.carousel-slide1 p, .carousel-slide2 p, .carousel-slide3 p, .carousel-slide4 p, .carousel-slide5 p {
-    width: 60%;
-    font-size: 22px;
-    color: #000000;
-    text-align: left;
+.book-button:hover {
+    background-color: #6555c5;
+    color: #000;
 }
 
-.active {
-    display: block; 
-}
-
-.carousel-slide1 {
-    background-color: #c8d9e6;
-}
-.carousel-slide2 {
-    background-color: #9ec6d5;
-}
-.carousel-slide3 {
-    background-color: #e4edf3;
-}
-.carousel-slide4 {
-    background-color: #455d72;
-}
-.carousel-slide5 {
-    background-color: #6c93ab;
-}
-
-.prev, .next {
+button.prev, button.next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
     border: none;
-    color: #fff;
     font-size: 24px;
     cursor: pointer;
+    border-radius: 50%;
+    padding: 15px;
+    z-index: 10;
+}
+.about {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    gap: 10px;
 }
 
-.prev {
+button.prev {
     left: 10px;
 }
 
-.next {
-    right: 10px;
+button.next {
+    right: 20px;
+}
+
+button.prev:hover, button.next:hover {
+    background-color: #4980c7;
+    color: #2f4156;
 }
 
 .carousel-dots {
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+    gap: 5px;
 }
 
 .dot {
-    height: 10px;
     width: 10px;
-    margin: 0 5px;
-    background-color: #2f4156;
+    height: 10px;
+    background-color: #aaa;
     border-radius: 50%;
-    display: inline-block;
+    cursor: pointer;
 }
 
 .dot.active {
-    background-color: #567c8d;
+    background-color: #ffffff;
 }
 
 .search {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-    
+    margin: 20px;
+    gap: 10px;
 }
 
 .search input {
+    width: 80%;
+    max-width: 600px;
+    font-size: 32px;
     padding: 10px;
     border-radius: 5px;
-    border: none;
-    width: 56%;
-    height: 50px;
-    background-color: #ffffff;
-    color: #567c8d;
+    border: 1px solid #ccc;
 }
 
 .search button {
-    padding: 10px;
-    margin-left: 10px;
+    padding: 10px 20px;
     background-color: #567c8d;
     border: none;
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 32px;
 }
 
 .read-today {
     text-align: center;
-    margin-top: 20px;
+    padding: 20px;
 }
-
 .read-today h2 {
-    margin-bottom: 10px;
-    font-size: 24px;
-    color: #2f4156;
+    font-size: 32px;
 }
 
 .read-today-items {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
     justify-content: center;
-    gap: 40px;
+    padding: 20px;
 }
 
 .read-today .item {
-    width: 195px;
-    height: 195px;
+    text-align: center;
     background-color: #2f4156;
     border-radius: 10px;
+    padding: 10px;
     color: #ffffff;
+    font-size: 32px;
 }
 
-.read-today .item img{
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 100px;
-    height: 120px;
-    border-radius: 10px;
-}
-
-.popular-categoriesh2{
-    margin-left: 19%;
-    padding-top: 30px;
-    color:#567c8d
-}
-
-.popular-categories {
+.read-today .item img {
+    max-width: 100%;
+    height: 300px;
     margin: 10px auto;
-    max-width: 1200px;
+}
+
+.popular-categoriesh2 {
     text-align: center;
-    display: flex;             
-    justify-content: center;   
-    align-items: center;
-    margin-bottom: 30px;
-    
+    color: #567c8d;
+    padding-top: 20px;
+    font-size: 36px;
 }
 
 .categories-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);  
-    text-align: center;
-    gap: 10px 100px;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    gap: 10px;
+    margin: 20px auto;
+    padding: 10px;
 }
 
 .category-item {
+    padding: 15px;
+    text-align: center;
     background-color: #567c8d;
-    color: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    transition: background-color 0.5s;
-    cursor: pointer;
+    color: white;
+    border-radius: 5px;
+    font-size: 28px;
 }
 
 .category-item:hover {
     background-color: #2f4156;
 }
 
-
 .footer {
-    background-color: #2f4156; 
+    background-color: #2f4156;
     color: #ffffff;
-    padding: 20px; 
-    text-align: end; 
-    position: relative; 
-    width: 100%; 
+    padding: 20px;
+    text-align: center;
+    font-size: 24px;
+}
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+    }
+
+    .book-button {
+        display: none;
+    }
+    
+    .carousel-image{
+        display: none;
+    }
+
+    .navigation-panel ul {
+        gap: 10px;
+        justify-content: center;
+    }
+
+    .carousel-container {
+        height: 250px;
+    }
+
+    .carousel-slide {
+        flex-direction: column;
+    }
+
+    .carousel-slide p {
+        font-size: 1rem;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .carousel-slide img {
+        max-width: 80%;
+    }
+
+    .carousel .book-button {
+        font-size: 1rem;
+    }
+
+    .search input {
+        width: 90%;
+    }
+    .navigation-panel ul button{
+        margin-left: 0.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .logo img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .logo a {
+        font-size: 16px;
+    }
+
+    .carousel-container {
+        height: 200px;
+    }
+
+    .carousel-slide p {
+        font-size: 0.9rem;
+    }
+
+    .carousel-slide img {
+        max-width: 100%;
+    }
+
+    .carousel .book-button {
+        font-size: 0.9rem;
+    }
+
+    .categories-grid {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    }
+
+    .category-item {
+        font-size: 12px;
+    }
 }
